<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_add_note">Add</string>
    <string name="start_fragment_choose">Choose?</string>
    <string name="text_room">ROOM</string>
    <string name="title">Notes</string>
    <string name="toast_enter_name_of_note">Enter name of note</string>
    <string name="text_firebase">Firebase</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="start_btn_login">Login</string>
    <string name="toast_empty_login">enter password and email</string>
    <string name="toast_firebase_init_success">init successful</string>
</resources>